# xion-sequencing

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml
.localstack/bootstrap/: dlq-attrs.json  source-queue-attrs.json  sqs.sh
golang/aws-sqs/: go.mod  go.sum  main.go
golang/memory/: main.go
golang/redis/: go.mod  main.go
python/aws-sqs/: main.py  requirements.txt
python/memory/: main.py
python/redis/: main.py
rust/aws-sqs/: Cargo.toml
rust/aws-sqs/src/: main.rs
rust/memory/src/: main.rs
rust/redis/: Cargo.toml
rust/redis/src/: main.rs
typescript/aws-sqs/: package.json
typescript/aws-sqs/src/: aws.ts  config.ts  main.ts
typescript/memory/: .env.sample  package.json
typescript/memory/src/: cosmos.ts  main.ts
typescript/redis/: package.json
typescript/redis/src/: config.ts  main.ts
