[package]
name = "sqs_producer_consumer"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "0.5.0"
aws-sdk-sqs = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-smithy-client = "0.60.3"
aws-smithy-types = "1.1.10"
